<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ContactFragment">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:hint="@string/nameETHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:hint="@string/phoneETHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Button
        android:id="@+id/saveBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveBTText"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <Button
        android:id="@+id/exitBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/exitBTText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveBT"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />

    <Button
        android:id="@+id/backBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/backBTText"
        app:layout_constraintEnd_toStartOf="@+id/saveBT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneET" />


    <LinearLayout
        android:layout_width="419dp"
        android:layout_height="508dp"
        android:layout_margin="@dimen/_6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBT">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contactListRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_item" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>