<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationFragment">

    <EditText
        android:id="@+id/loginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:ems="10"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/_48dp"
        android:hint="@string/loginETHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:ems="10"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minHeight="@dimen/_48dp"
        android:hint="@string/passwordETHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginET" />


    <EditText
        android:id="@+id/confirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:ems="10"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minHeight="@dimen/_48dp"
        android:hint="@string/confirmPasswordETHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />


    <Button
        android:id="@+id/signInBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signInBTText"
        android:layout_marginTop="@dimen/_40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordET" />


    <TextView
        android:id="@+id/iHaveAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iHaveAccountTVText"
        android:layout_marginTop="@dimen/_40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInBT" />

</androidx.constraintlayout.widget.ConstraintLayout>