<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".SignInFragment">

    <EditText
        android:id="@+id/loginET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/loginETHint"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginStart="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_40dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/passwordETHint"
        android:inputType="textPassword"
        android:minHeight="@dimen/_48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginET" />

    <Button
        android:id="@+id/logInBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/logInBTText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordET" />

    <TextView
        android:id="@+id/redirectTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:text="@string/redirectTVText"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInBT" />

</androidx.constraintlayout.widget.ConstraintLayout>